--- a/css/_videolayout_default.scss
+++ b/css/_videolayout_default.scss
@@ -408,7 +408,7 @@
 
 .connection-indicator {
     background: $connectionIndicatorBg;
-    display: none;
+    // display: none;
 
     &.status-high {
         background: green;
