--- a/css/filmstrip/_vertical_filmstrip_overrides.scss
+++ b/css/filmstrip/_vertical_filmstrip_overrides.scss
@@ -109,7 +109,7 @@
         // border: 2px solid rgba(210, 210, 210, .7);
         padding: 2px; 
         &.connection-indicator, &.show-connection-indicator {
-            display: none;
+            // display: none;
         }
         .jitsi-icon {
             svg {
